crates/bijux-planner-fastq/tests/contracts/plan/snapshots/plan__plan_snapshots__fastq_default_pipeline_plan.snap
---
source: crates/bijux-planner-fastq/tests/plan/plan_snapshots.rs
expression: plan
---
{
  "schema_version": "bijux.execution_graph.v1",
  "contract_version": {
    "major": 1,
    "minor": 0
  },
  "pipeline_id": "fastq-to-fastq__default__v1",
  "planner_version": "bijux-planner-fastq.v1",
  "policy": "PreferAccuracy",
  "deterministic_scheduler": true,
  "retry_policy": {
    "max_attempts": 1,
    "retry_on_exit_codes": []
  },
  "step_timeout_s": null,
  "steps": [
    {
      "step_id": "fastq.detect_adapters",
      "stage_id": "fastq.detect_adapters",
      "command": {
        "template": [
          "echo"
        ]
      },
      "image": {
        "image": "bijux/test",
        "digest": "sha256:plan"
      },
      "resources": {
        "runtime": "docker",
        "mem_gb": 1,
        "tmp_gb": 1,
        "threads": 1
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "reads_R1.fastq.gz",
            "role": "reads",
            "optional": false
          }
        ],
        "outputs": [
          {
            "name": "fastqc_dir",
            "path": "out/detect_adapters/fastqc/fastqc",
            "role": "index",
            "optional": false
          }
        ]
      },
      "out_dir": "out/detect_adapters/fastqc",
      "aux_images": {},
      "expected_artifact_ids": [],
      "metrics_schema_ids": []
    },
    {
      "step_id": "fastq.filter",
      "stage_id": "fastq.filter",
      "command": {
        "template": [
          "echo"
        ]
      },
      "image": {
        "image": "bijux/test",
        "digest": "sha256:plan"
      },
      "resources": {
        "runtime": "docker",
        "mem_gb": 1,
        "tmp_gb": 1,
        "threads": 1
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "out/trim/fastp/fastp.fastq.gz",
            "role": "reads",
            "optional": false
          }
        ],
        "outputs": [
          {
            "name": "filtered_reads",
            "path": "out/filter/fastp/fastp.fastq.gz",
            "role": "reads",
            "optional": false
          }
        ]
      },
      "out_dir": "out/filter/fastp",
      "aux_images": {},
      "expected_artifact_ids": [],
      "metrics_schema_ids": []
    },
    {
      "step_id": "fastq.qc_post",
      "stage_id": "fastq.qc_post",
      "command": {
        "template": [
          "echo"
        ]
      },
      "image": {
        "image": "bijux/test",
        "digest": "sha256:plan"
      },
      "resources": {
        "runtime": "docker",
        "mem_gb": 1,
        "tmp_gb": 1,
        "threads": 1
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "out/filter/fastp/fastp.fastq.gz",
            "role": "reads",
            "optional": false
          }
        ],
        "outputs": [
          {
            "name": "multiqc_report",
            "path": "out/qc_post/multiqc/multiqc_report.html",
            "role": "report_html",
            "optional": true
          },
          {
            "name": "multiqc_data",
            "path": "out/qc_post/multiqc/multiqc_data",
            "role": "index",
            "optional": true
          }
        ]
      },
      "out_dir": "out/qc_post/multiqc",
      "aux_images": {},
      "expected_artifact_ids": [],
      "metrics_schema_ids": []
    },
    {
      "step_id": "fastq.stats_neutral",
      "stage_id": "fastq.stats_neutral",
      "command": {
        "template": [
          "echo"
        ]
      },
      "image": {
        "image": "bijux/test",
        "digest": "sha256:plan"
      },
      "resources": {
        "runtime": "docker",
        "mem_gb": 1,
        "tmp_gb": 1,
        "threads": 1
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "out/filter/fastp/fastp.fastq.gz",
            "role": "reads",
            "optional": false
          }
        ],
        "outputs": [
          {
            "name": "stats_json",
            "path": "out/stats_neutral/seqkit_stats/stats.json",
            "role": "metrics_json",
            "optional": false
          }
        ]
      },
      "out_dir": "out/stats_neutral/seqkit_stats",
      "aux_images": {},
      "expected_artifact_ids": [],
      "metrics_schema_ids": []
    },
    {
      "step_id": "fastq.trim",
      "stage_id": "fastq.trim",
      "command": {
        "template": [
          "echo"
        ]
      },
      "image": {
        "image": "bijux/test",
        "digest": "sha256:plan"
      },
      "resources": {
        "runtime": "docker",
        "mem_gb": 1,
        "tmp_gb": 1,
        "threads": 1
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "reads_R1.fastq.gz",
            "role": "reads",
            "optional": false
          }
        ],
        "outputs": [
          {
            "name": "trimmed_reads",
            "path": "out/trim/fastp/fastp.fastq.gz",
            "role": "trimmed_reads",
            "optional": false
          }
        ]
      },
      "out_dir": "out/trim/fastp",
      "aux_images": {},
      "expected_artifact_ids": [],
      "metrics_schema_ids": []
    },
    {
      "step_id": "fastq.validate_pre",
      "stage_id": "fastq.validate_pre",
      "command": {
        "template": [
          "echo"
        ]
      },
      "image": {
        "image": "bijux/test",
        "digest": "sha256:plan"
      },
      "resources": {
        "runtime": "docker",
        "mem_gb": 1,
        "tmp_gb": 1,
        "threads": 1
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "reads_R1.fastq.gz",
            "role": "reads",
            "optional": false
          }
        ],
        "outputs": [
          {
            "name": "validation_report",
            "path": "out/validate_pre/fastqvalidator_official/validation.json",
            "role": "report_json",
            "optional": false
          }
        ]
      },
      "out_dir": "out/validate_pre/fastqvalidator_official",
      "aux_images": {},
      "expected_artifact_ids": [],
      "metrics_schema_ids": []
    }
  ],
  "edges": [
    {
      "from": "fastq.detect_adapters",
      "to": "fastq.trim"
    },
    {
      "from": "fastq.filter",
      "to": "fastq.stats_neutral"
    },
    {
      "from": "fastq.stats_neutral",
      "to": "fastq.qc_post"
    },
    {
      "from": "fastq.trim",
      "to": "fastq.filter"
    },
    {
      "from": "fastq.validate_pre",
      "to": "fastq.detect_adapters"
    }
  ]
}
