crates/bijux-planner-fastq/tests/contracts/plan/snapshots/plan__plan_snapshots__fastq_plan_snapshot.snap
---
source: crates/bijux-planner-fastq/tests/plan/plan_snapshots.rs
expression: plan
---
{
  "schema_version": "bijux.execution_graph.v1",
  "contract_version": {
    "major": 1,
    "minor": 0
  },
  "pipeline_id": "fastq-to-fastq__default__v1",
  "planner_version": "bijux-planner-fastq.v1",
  "policy": "PreferAccuracy",
  "deterministic_scheduler": true,
  "retry_policy": {
    "max_attempts": 1,
    "retry_on_exit_codes": []
  },
  "step_timeout_s": null,
  "steps": [
    {
      "step_id": "fastq.trim",
      "stage_id": "fastq.trim",
      "command": {
        "template": [
          "fastp"
        ]
      },
      "image": {
        "image": "bijux/fastp",
        "digest": "sha256:fastp"
      },
      "resources": {
        "runtime": "short",
        "mem_gb": 2,
        "tmp_gb": 1,
        "threads": 2
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "reads_R1.fastq.gz",
            "role": "reads",
            "optional": false
          }
        ],
        "outputs": [
          {
            "name": "trimmed_reads",
            "path": "out/trim/fastp/fastp.fastq.gz",
            "role": "trimmed_reads",
            "optional": false
          }
        ]
      },
      "out_dir": "out/trim/fastp",
      "aux_images": {},
      "expected_artifact_ids": [],
      "metrics_schema_ids": []
    },
    {
      "step_id": "fastq.validate_pre",
      "stage_id": "fastq.validate_pre",
      "command": {
        "template": [
          "fastqvalidator"
        ]
      },
      "image": {
        "image": "bijux/fastqvalidator",
        "digest": "sha256:fastqvalidator"
      },
      "resources": {
        "runtime": "short",
        "mem_gb": 1,
        "tmp_gb": 1,
        "threads": 1
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "reads_R1.fastq.gz",
            "role": "reads",
            "optional": false
          }
        ],
        "outputs": [
          {
            "name": "validation_report",
            "path": "out/validate_pre/fastqvalidator_official/validation.json",
            "role": "report_json",
            "optional": false
          }
        ]
      },
      "out_dir": "out/validate_pre/fastqvalidator_official",
      "aux_images": {},
      "expected_artifact_ids": [],
      "metrics_schema_ids": []
    }
  ],
  "edges": [
    {
      "from": "fastq.validate_pre",
      "to": "fastq.trim"
    }
  ]
}
